# claude-scout

./: .gitignore  CHANGELOG.md  CLAUDE.md  MVP.md  Makefile  README.md  TODO.md  plan.md  pyproject.toml
.claude/: remove-lacgacy-skills.py  trim_skills.sh
.github/workflows/: ci.yml
candidates/: discovery-2026-07-06.json  discovery-2026-07-07.json  discovery-2026-07-08.json  discovery-2026-07-09.json  seen.txt
defaults/: config.yml
docs/: USER_MANUAL.md
drafts/affaan-m-ecc/: candidate.json
logs/llm-council/: coreyhaines31-marketingskills-2026-07-08.md
prompts/: build.md  committee.md  council_advisor.md  council_chairman.md  eval_tests.md
scripts/: backfill_committee.py
src/: main.py
src/scout/: __main__.py  build.py  eval.py  harvest_github.py  harvest_reddit.py  library.py  main.py  util.py
tests/: conftest.py  test_build.py  test_eval.py  test_harvest_github.py  test_library.py  test_util.py
tests/commands/: test_build.py  test_committee.py  test_council.py  test_eval.py  test_insights.py  test_library.py  test_reset_harvest.py
tests/core/: test_logger.py
tests/services/: test_harvest_common.py  test_harvest_github.py  test_harvest_tiktok.py  test_harvest_twitter.py  test_harvest_youtube.py
trash/anthropics-claude-code/: SKILL.md  candidate.json  committee_verdict.json
trash/composiohq-awesome-claude-skills/: SKILL.md
trash/coreyhaines31-marketingskills/: SKILL.md  candidate.json
trash/hesreallyhim-awesome-claude-code/: SKILL.md  candidate.json
trash/nidhinjs-prompt-master/: SKILL.md  candidate.json  committee_verdict.json  (+1 more)
(+400 files in other folders)
